--- a/css/tour&travels.css
+++ b/css/tour&travels.css
@@ -3,6 +3,22 @@ footer {
   color: rgba(255, 255, 255, .7);
 
 }
+.navbar {
+  background-color: #007BFF;
+}
+
+.navbar-brand img {
+  height: 80px;
+}
+
+.nav-link {
+  color: #fff !important;
+}
+
+.nav-link:hover {
+  color: #FFD700 !important;
+}
+
 
 .navbar-nav .nav-link {
   font-family: 'Poppins', sans-serif;
